Revert "Platform integration"

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -1,5 +1,4 @@
 <link rel="import" href="/elements/elements.html">
-<link rel="import" href="coduno-iron-ajax.html">
 
 <dom-module id="app-element">
 	<style>
@@ -12,22 +11,27 @@
 		}
 	</style>
 	<template>
-		<coduno-iron-ajax
+		<iron-ajax
 			id="resultRequest"
 			method="POST"
+			handle-as="json"
 			on-response="onResultResponse"
 			debounce-duration="1000"
+			content-type="application/json"
 			with-credentials="true"
 			on-error="onResultError"
 			>
-		</coduno-iron-ajax>
+		</iron-ajax>
 
-		<coduno-iron-ajax
+		<iron-ajax
 			id="challengeRequest"
+			handle-as="json"
 			on-response="onChallengeResponse"
 			debounce-duration="1000"
+			content-type="application/json"
+			with-credentials="true"
 			>
-		</coduno-iron-ajax>
+		</iron-ajax>
 
 		<cookie-service id="cookieService"></cookie-service>
 
@@ -39,7 +43,7 @@
 					<div class="flex">
 						<paper-tabs id="bottomTabs" class="bottom indent" selected="{{selected}}" noink no-slide>
 							<span class="flex-5"></span>
-							<template is="dom-if" if="{{isOrganization}}">
+							<template is="dom-if" if="{{isCompany}}">
 								<paper-tab link><a href="/candidates" class="center-center horizontal layout">Candidates</a></paper-tab>
 								<paper-tab link><a href="/challenges" class="center-center horizontal layout">Challenges</a></paper-tab>
 								<paper-tab link><a href="/tasks" class="center-center horizontal layout fullHeight">Tasks</a></paper-tab>
@@ -138,7 +142,7 @@
 					type: Object,
 					notify: true
 				},
-				isOrganization: {
+				isCompany: {
 					type: Boolean,
 					notify: true
 				},
@@ -216,7 +220,7 @@
 			},
 			login: function() {
 				this.refreshMenu(true);
-				if (localStorage.organization) {
+				if (localStorage.company) {
 					return page.redirect('/candidates');
 				}
 				page.redirect('/challenge');
@@ -227,8 +231,8 @@
 				page.redirect('/login');
 			},
 			refreshMenu: function(loggedIn) {
-				this.isOrganization = !!localStorage.organization;
-				this.isCoder = !this.isOrganization;
+				this.isCompany = !!localStorage.company;
+				this.isCoder = !this.isCompany;
 				this.isLoggedIn = loggedIn;
 			},
 			displayInstalledToast: function() {
