--- a/app/elements/services/template-service.html
+++ b/app/elements/services/template-service.html
@@ -7,18 +7,21 @@
 		}
 	</style>
 	<template>
-		<coduno-iron-ajax
+		<iron-ajax
 			id="getTemplateList"
 			method="GET"
+			handle-as="json"
+			with-credentials="true"
 			on-response="_onList"
 			on-error="_onError">
-		</coduno-iron-ajax>
-		<coduno-iron-ajax
+		</iron-ajax>
+		<iron-ajax
 			id="getTemplate"
 			method="GET"
+			handle-as="blob"
 			on-response="_onTemplate"
 			on-error="_onError">
-		</coduno-iron-ajax>
+		</iron-ajax>
 	</template>
 	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
@@ -44,7 +47,7 @@
 			getTemplates: function(language) {
 				this.app.startLoading();
 				this.templates = [];
-				this.$.getTemplateList.url = util.build('/tasks/' + this.task.id + '/templates' + (language ? '?language=' + language : ''));
+				this.$.getTemplateList.url = util.build('/tasks/' + this.task.Key + '/templates' + (language ? '?language=' + language : ''));
 				this.$.getTemplateList.generateRequest();
 			},
 			_onList: function(e) {
