--- a/app/elements/submission/challenge-display.html
+++ b/app/elements/submission/challenge-display.html
@@ -1,10 +1,10 @@
 <dom-module id="challenge-display">
 	<template>
-		<h1>{{challenge.Assignment.Name}}</h1>
+		<h1>{{challenge.name}}</h1>
 		<h3>Description</h3>
-		<p>{{challenge.Assignment.Description}}</p>
+		<p>{{challenge.description}}</p>
 		<h3>Instructions</h3>
-		<p>{{challenge.Instructions}}</p>
+		<p>{{challenge.instructions}}</p>
 	</template>
 	<script>
 		Polymer({
