--- a/app/elements/candidates/candidate-card.html
+++ b/app/elements/candidates/candidate-card.html
@@ -1,7 +1,6 @@
 <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
-<link rel="import" href="/elements/behaviors/card-behavior.html">
 
 <dom-module id="candidate-card">
 	<style>
@@ -62,6 +61,7 @@
 			</paper-material>
 		</a>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/card-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'candidate-card',
