--- a/app/elements/services/result-service.html
+++ b/app/elements/services/result-service.html
@@ -28,6 +28,7 @@
 				on-error="_onError">
 			</iron-ajax>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'result-service',
