--- a/app/elements/submission/tasks/javaut-task.html
+++ b/app/elements/submission/tasks/javaut-task.html
@@ -13,13 +13,9 @@
 			<javaut-console id="console"></javaut-console>
 		</code-task>
 	</template>
-	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'javaut-task',
-			behaviors: [
-				Behaviors.WSReaderBehavior
-			],
 			properties: {
 				task: {
 					type: Object,
@@ -38,6 +34,19 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
+			listeners: {
+				'ws-onerror': '_onWsError',
+				'ws-onmessage': '_onWsMessage',
+				'ws-onopen': '_onWsOpen'
+			},
+			_onWsOpen: function(){
+				// default action
+				console.log('WS OPENED');
+			},
+			_onWsError: function(err){
+				//default action
+				console.log(err);
+			},
 			_onWsMessage: function(data){
 				var response = JSON.parse(data.detail);
 				if(response.Results === undefined || response.Results.length === 0 || response.Stderr !== ''){
