--- a/app/elements/submission/tasks/output-match-task.html
+++ b/app/elements/submission/tasks/output-match-task.html
@@ -13,13 +13,9 @@
 			<test-stats-console id="console" task="{{task}}"></test-stats-console>
 		</code-task>
 	</template>
-	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'output-match-task',
-			behaviors: [
-				Behaviors.WSReaderBehavior
-			],
 			properties: {
 				task: {
 					type: Object,
@@ -34,6 +30,19 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
+			listeners: {
+				'ws-onerror': '_onWsError',
+				'ws-onmessage': '_onWsMessage',
+				'ws-onopen': '_onWsOpen'
+			},
+			_onWsOpen: function(){
+				// default action
+				console.log('WS OPENED');
+			},
+			_onWsError: function(err){
+				//default action
+				console.log(err);
+			},
 			_onWsMessage: function(data){
 				//default implementation
 				this.$.console.setOutput(JSON.parse(data.detail));
