remove wsreader behavior

--- a/app/elements/services/profile-service.html
+++ b/app/elements/services/profile-service.html
@@ -16,6 +16,7 @@
 			on-error="_onError">
 		</coduno-iron-ajax>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'profile-service',
