Fix finish button

--- a/app/elements/code-editor/code-editor.html
+++ b/app/elements/code-editor/code-editor.html
@@ -13,7 +13,7 @@
 		}
 	</style>
 	<template>
-		<ws-element url="{{wsUrl}}"></ws-element>
+		<!-- <ws-element url="{{wsUrl}}"></ws-element> -->
 		<div id="editor"></div>
 	</template>
 	<script src="/bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
