--- a/app/elements/submission/sequential/sequential-challenge.html
+++ b/app/elements/submission/sequential/sequential-challenge.html
@@ -31,7 +31,7 @@
 	</style>
 	<template>
 		<task-service id="taskService" task="{{task}}"></task-service>
-		<challenge-nav id="coolNav" task-index="{{taskIndex}}" total-tasks="{{totalTasks}}"
+		<challenge-nav id="coolNav" task-index="{{taskIndex}}" total-tasks="{{challenge.tasks.length}}"
 			task-duration="{{taskDuration}}" challenge-duration="{{challenge.Duration}}"
 			task-start-time="{{taskStartTime}}" challenge-start-time="{{challengeStartTime}}">
 		</challenge-nav>
@@ -57,7 +57,6 @@
 			// TODO(victorbalan): Refactor component and split logic and refactor requests.
 			is: 'sequential-challenge',
 			properties: {
-				totalTasks: Number,
 				challenge: {
 					type: Object,
 					notify: true,
@@ -106,7 +105,6 @@
 			},
 			afterPropertiesSet: function(){
 				var currentTask = '';
-				this.totalTasks = this.challenge.tasks.length;
 				if(this.result.startTimes){
 					for(var i=0; i<this.result.startTimes.length; i++){
 						if(new Date(this.result.startTimes[i]).getTime()>0){
@@ -127,7 +125,7 @@
 			},
 			startChallenge: function() {
 				this.task = this.challenge.tasks[this.taskIndex];
-				// this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
+				// TODO - update result and set starting time
 				this.$.coolNav.start();
 			},
 			loadTaskById: function(key){
@@ -162,13 +160,13 @@
 				this.taskStartTime = 0;
 
 				this.taskIndex++;
-				if(this.taskIndex < this.challenge.Tasks.length){
-					this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
+				if(this.taskIndex < this.challenge.tasks.length){
+					this.task = this.challenge.tasks[this.taskIndex];
 					return;
 				}
 				this.$.coolNav.stop();
 				// This starts the result computing
-				this.$.getResultRequest.url = util.build('/results/' + this.result.Key);
+				this.$.getResultRequest.url = util.build('/results/' + this.result.id);
 				this.$.getResultRequest.generateRequest();
 
 				this._importAndReplaceContent('/elements/submission/challenge-finished.html', 'challenge-finished');
