--- a/app/elements/code-editor/consoles/test-stats-console.html
+++ b/app/elements/code-editor/consoles/test-stats-console.html
@@ -63,8 +63,8 @@
 				'_afterPropertiesSet(task)'
 			],
 			_afterPropertiesSet: function(){
-				this.$.getTestsRequest.url = util.build('/tasks/' + this.task.id + '/tests');
-				this.$.getTestsRequest.generateRequest();
+				// this.$.getTestsRequest.url = util.build('/tasks/' + this.task.id + '/tests');
+				// this.$.getTestsRequest.generateRequest();
 			},
 			setOutput: function(result){
 				if (!!result.Stderr) {
