--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -77,7 +77,7 @@
 			},
 			invite: function(user){
 				this.app.startLoading();
-				this.$.inviteUser.url = util.build('/invitations');
+				this.$.inviteUser.url = util.build('/invite');
 				this.$.inviteUser.body = user;
 				this.$.inviteUser.generateRequest();
 			},
